--- a/ansible/apacheBase.yml
+++ b/ansible/apacheBase.yml
@@ -20,6 +20,11 @@
     http_port: 80
     max_clients: 200
   
+  vars_prompt:
+    - name: m_password
+      prompt: "Mysql Root Password"
+      private: yes
+
 
   # define the tasks that are part of this play...
 
@@ -45,10 +50,11 @@
         - git-core
         - zip
         - facter
-        - libjson-ruby
+        - ruby-json
         - rsync
         - logwatch
         - checksecurity
         - fail2ban
   - name: Update Hosts file
     action: template src=templates/etc_hosts.j2 dest=/etc/hosts
+  - include: tasks/apache_php.yml
